        PR c++/27371         * tree-inline.c (copy_result_decl_to_var): New fn.         (declare_return_variable): Use it.  Call declare_inline_vars here.         (expand_call_inline): Not here.         * cp/cvt.c (convert_to_void): Strip useless TARGET_EXPR.         * cp/cp-tree.h (TARGET_EXPR_IMPLICIT_P): New macro.         * cp/tree.c (build_cplus_new): Set it.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116737 138bc75d-0d04-0410-961f-82ee72b054a4